--- a/Tests/Core.Test.csproj
+++ b/Tests/Core.Test.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\Core\Core.csproj" />
+    <ProjectReference Include="..\Source\Core.csproj" />
   </ItemGroup>
 
 </Project>
