--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
   dotnetcoreexecutor:
     docker:
-      - image: microsoft/aspnetcore-build:2.2
+      - image: microsoft/dotnet:2.2-sdk
 jobs:
   build:
     executor: dotnetcoreexecutor
