--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,17 @@ jobs:
     executor: dotnetcoreexecutor
     steps:
       - checkout
-      - run: find .
-      - run: dotnet restore
-      - run: dotnet build
+      - run: dotnet build Source/ProtoStar.Core.csproj
+  test:
+    executor: dotnetcoreexecutor
+    steps:
+      - checkout
       - run: dotnet test
+workflows:
+  version: 2.1
+  build_test:
+    jobs:
+      - build
+      - test:
+        requires:
+          - build
