--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,14 @@ jobs:
     executor: dotnetcoreexecutor
     steps:
       - checkout
+      - run: dotnet restore
       - run: dotnet build Source/ProtoStar.Core.csproj
   test:
     executor: dotnetcoreexecutor
     steps:
       - checkout
+      - run: dotnet restore
+      - run: dotnet build
       - run: dotnet test
 
 workflows:
