--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,18 +8,30 @@ jobs:
     executor: dotnetcoreexecutor
     steps:
       - checkout
-      - run: dotnet build Source/Core.csproj
+      - run: dotnet build Source/ProtoStar.Core.csproj
   test:
     executor: dotnetcoreexecutor
     steps:
       - checkout
       - run: dotnet test
+  code_coverage:
+    executor: dotnetcoreexecutor
+    steps:
+      - checkout
+      - run: >
+          dotnet test 
+          /p:CollectCoverage=true 
+          /p:Exclude=[ProtoStar.Core.Test*]*
+          /p:Threshold=20
 
 workflows:
   version: 2.1
-  build_test:
+  build_test_coverage:
     jobs:
       - build
       - test:
           requires:
             - build
+      - code_coverage:
+          requires:
+            - test
