CI auto deploys on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,22 @@ jobs:
           /p:CollectCoverage=true 
           /p:Exclude=[ProtoStar.Core.Test*]*
           /p:Threshold=20
+  deploy:
+    executor: dotnetcoreexecutor
+    steps:
+      - checkout
+      - run: >
+          dotnet pack
+          Source/ProtoStar.Core.csproj
+          -c Release
+          --include-source
+          --include-symbols
+          -o ../nuget
+      - run: >
+          dotnet nuget push 
+          nuget/*.nupkg
+          -s https://api.nuget.org/v3/index.json
+          -k ${NUGET_API_KEY}
 
 workflows:
   version: 2.1
@@ -35,3 +51,10 @@ workflows:
       - code_coverage:
           requires:
             - test
+      - deploy:
+          requires:
+            - code_coverage
+          filters:
+            branches:
+              only:
+                - master
