--- a/Source/ProtoStar.Core.csproj
+++ b/Source/ProtoStar.Core.csproj
@@ -15,4 +15,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
