--- a/Source/ProtoStar.Core.csproj
+++ b/Source/ProtoStar.Core.csproj
@@ -2,17 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>ProtoStar.Core</RootNamespace>
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Company>ceCosmos</Company>
-    <Product>ProtoStar</Product>
-    <Authors>Johni Michels</Authors>
-    <RepositoryUrl>https://gitlab.com/ceCosmos/ProtoStar</RepositoryUrl>
-    <PackageId>ProtoStar.Core</PackageId>
     <AssemblyName>ProtoStar.Core</AssemblyName>
+    <Version>1.1.0-alpha</Version>
+    <Company>ceCosmos</Company>
+    <Authors>Johni.Michels</Authors>
+    <RepositoryUrl>https://github.com/cecosmos/ProtoStar.Core</RepositoryUrl>
     <LangVersion>latest</LangVersion>
+    <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
