--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           dotnet nuget push 
           nuget/*.nupkg
           -s https://api.nuget.org/v3/index.json
-          -k ${NUGET_API_KEY}
+          -k ${NUGET_API_KEY_CORE}
 
 workflows:
   version: 2.1
